// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/Buttons/Skeleton > render large 1`] = `
<div
  class="MuiBox-root MuiBox-root-3 Skeleton-root Skeleton-large Skeleton-root Skeleton-animate"
/>
`;

exports[`components/Buttons/Skeleton > render medium by default 1`] = `
<div
  class="MuiBox-root MuiBox-root-1 Skeleton-root Skeleton-medium Skeleton-root Skeleton-animate"
/>
`;

exports[`components/Buttons/Skeleton > render small 1`] = `
<div
  class="MuiBox-root MuiBox-root-2 Skeleton-root Skeleton-small Skeleton-root Skeleton-animate"
/>
`;
